--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
           </li>
         </ul>
       </nav>
+      <span id="date"></span>
     </header>
     <main class="mainApp">
       <section id="list" class="book-display">
